Fix Portal button visibility issue in preview mode

--- a/assets/css/misc/portal.css
+++ b/assets/css/misc/portal.css
@@ -1,4 +1,4 @@
 .home-template.with-full-cover:not(.portal-visible) .gh-portal-triggerbtn-iframe {
-    opacity: 0 !important;
+    opacity: 0;
     pointer-events: none;
 }
